# OpenVG

./: .gitignore  .gitmodules  CMakeLists.txt  CMakeSettings.json  INSTALL.bat  README.md
OpenVG/: CMakeLists.txt  VG.h  VGContext.h  VGElement.cpp  VGElement.h  VGGradient.h  VGPainter.h  VGPicture.h  VGRender.h  VGScene.h  VGShape.h  VGStroke.h  VGText.h
OpenVG/Private/: VGContext.cpp  VGElement.cpp  VGGradient.cpp  VGPainter.cpp  VGPath.h  VGPicture.cpp  VGShape.cpp  VGTessellate.cpp  VGTessellate.h  VGText.cpp  VGTrueType.cpp  VGTrueType.h
Sample/: CMakeLists.txt  OpenUIPainter.cpp  OpenUIPainter.h  OpenUIRender.cpp  OpenUIRender.h  OpenVGRender.cpp  OpenVGRender.h  main.cpp
