cmake_minimum_required (VERSION 3.8)

project ("OpenVG")

set(CMAKE_CXX_STANDARD 20)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR})
set(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR})
set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR})
set(OPENUI_ENABLE_SAMPLE OFF)

add_subdirectory (${CMAKE_SOURCE_DIR}/External/OpenUI)
add_subdirectory ("OpenVG")
add_subdirectory ("Sample")
