cmake_minimum_required (VERSION 3.8)
project ("OpenVG")

set(CMAKE_CXX_STANDARD 20)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR})
set(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR})
set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY  ${CMAKE_BINARY_DIR})
set(OPENVG_SOURCE_DIR ${CMAKE_CURRENT_SOURCE_DIR} CACHE STRING "OpenVG Source Path")

include_directories(${OPENVG_SOURCE_DIR})
include_directories(${OPENVG_SOURCE_DIR}/External/x64-windows/include)
if(CMAKE_BUILD_TYPE MATCHES Debug)
link_directories(${OPENVG_SOURCE_DIR}/External/x64-windows/debug/lib)
else()
link_directories(${OPENVG_SOURCE_DIR}/External/x64-windows/lib)
endif()

add_subdirectory (${OPENVG_SOURCE_DIR}/External/OpenUI)
add_subdirectory ("OpenVG")
add_subdirectory ("Sample")
